--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ home = [ "HTML", "RSS", "JSON"]
 # Prefix URL to edit current page. Will display an "Edit this page" button on top right hand corner of every page. 
 # Useful to give opportunity to people to create merge request for your doc.
 # See the config.toml file from this documentation site to have an example.
-# editURL = "https://github.com/elastos/Elastos.Developer.Website/blob/master/content/"
+editURL = "https://github.com/elastos/Elastos.Developer.Website/blob/master/content/"
 
 # Author of the site, will be used in meta information
 author = "Elastos Foundation"
