--- a/config.toml
+++ b/config.toml
@@ -83,3 +83,8 @@ weight = 40
 name = "<i class='fas fa-envelope menu-shortcut-icon'></i> Contact us"
 url = "mailto:contact@elastos.org"
 weight = 50
+
+[[languages.en.menu.shortcuts]] 
+name = "<i class='fas fa-arrow-alt-circle-left menu-shortcut-icon'></i> Previous website"
+url = "https://developer-previous.elastos.org/"
+weight = 60
