--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,8 @@ theme = "learn"
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
 
+ignorefiles = [ "old/.*", "new/.*" ]
+
 [params]
 # Prefix URL to edit current page. Will display an "Edit this page" button on top right hand corner of every page.
 # Useful to give opportunity to people to create merge request for your doc.
